--- a/Automation-App/src/app/app.component.html
+++ b/Automation-App/src/app/app.component.html
@@ -1,3 +1,33 @@
+
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu side="start" >
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>
+        Dashboard
+        </ion-title>
+      </ion-toolbar>
+    </ion-header>
+    
+  <ion-content>
+      <ion-list>
+        <ion-menu-toggle>
+        <ion-item lines="none">
+            <ion-icon name="business" slot="start"></ion-icon>
+            <ion-label>control</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-menu-toggle>
+          <ion-item lines="none">
+              <ion-icon name="heart" slot="start"></ion-icon>
+              <ion-label>logout</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+        </ion-content>
+        </ion-menu>  
+  <ion-router-outlet main></ion-router-outlet>
 </ion-app>
+
+
+
