--- a/Automation-App/src/app/dashboard/dashboard.page.html
+++ b/Automation-App/src/app/dashboard/dashboard.page.html
@@ -1,7 +1,8 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start" color="primary">
-       <ion-icon name="menu-outline"> </ion-icon>   
+    <ion-buttons slot="start">
+    <ion-menu-button ></ion-menu-button>
+
     </ion-buttons>
     <ion-title>
       Dashboard
@@ -13,8 +14,8 @@
   <ion-tab-bar slot="top">
     <ion-toolbar>
       <ion-segment value="all">
-    <ion-tab-button tab="mointer">
-      <ion-segment-button value="all">mointer</ion-segment-button>
+    <ion-tab-button tab="monitoring">
+      <ion-segment-button value="all">monitoring</ion-segment-button>
       </ion-tab-button>
     <ion-tab-button tab="control">
       <ion-segment-button value="all">control</ion-segment-button>
@@ -24,4 +25,21 @@
   </ion-tab-bar>
 </ion-tabs>
 </ion-content>
-
+<ion-content>
+<ion-tabs>
+<ion-tab-bar slot="bottom">
+    <ion-tab-button tab="games">
+      <ion-label>dashoard</ion-label>
+      <ion-icon name="heart-outline"></ion-icon>
+      </ion-tab-button>
+      <ion-tab-button>
+        <ion-label>login</ion-label>
+        <ion-icon name="person-circle-outline"></ion-icon>
+      </ion-tab-button>  
+    <ion-tab-button tab="movies">
+    <ion-label>Browser</ion-label>
+    <ion-icon name="browsers-outline"></ion-icon>
+    </ion-tab-button>
+</ion-tab-bar>
+</ion-tabs>
+</ion-content>
