--- a/Automation-App/src/app/auth/auth.page.html
+++ b/Automation-App/src/app/auth/auth.page.html
@@ -1,40 +1,45 @@
 <ion-header>
-  <ion-toolbar>
-   <ion-title>Login/SignUp</ion-title>
+  <ion-toolbar color="primary">
+   <ion-title >Login</ion-title>  <!--The title off the page-->
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <form #f='ngForm' (ngSubmit)='onSubmit(f)'>
+<ion-content padding> <!--Padding is added to ensure space-->
+  <p align="center"> <ion-img style="width: 100px;" src="assets/icon/logo1.jpg"></ion-img></p>
+  <form [formGroup]="formgroup">
+    <!--Start of the grid-->
   <ion-grid>
     <ion-row>
-      <ion-col size-md='7' offset-md="3">
+      <ion-col size-md='6' offset-md="3">
         <ion-list>
           <ion-item>
             <ion-label position='floating'>E-mail</ion-label>
-            <ion-input type="email" ngModel name='email' pattern="[A-Za-z0-9._%+-]{3,}@[a-zA-Z]{3,}([.]{1}[a-zA-Z]{2,}|[.]{1}[a-zA-Z]{2,}[.]{1}[a-zA-Z]{2,})" required email #emailCtrl='ngModel'></ion-input>
-          </ion-item><ion-item  *ngIf="!emailCtrl.valid && emailCtrl.touched" lines='none'><ion-label color='medium'>Should be a valid email address.</ion-label></ion-item>
+            <ion-input type="email" formControlName="email"></ion-input>
+          </ion-item><ion-item  *ngIf="!formgroup.controls.email.valid && formgroup.controls.email.touched" lines='none'>
+            <ion-label color='danger'>Should be a valid email address.</ion-label> 
+          </ion-item>
           <ion-item>
             <ion-label position="floating">Password</ion-label>
-            <ion-input type="password" ngModel name='password' required pattern='^(?=.*[0-9]+.*)(?=.*[a-zA-Z]+.*)[0-9a-zA-Z]{6,}$' minlength='8' #passwordCtrl='ngModel'></ion-input>
+            <ion-input type="password" formControlName="password"></ion-input>
           </ion-item>
-          <ion-item  *ngIf="!passwordCtrl.valid && passwordCtrl.touched" lines='none'><ion-label color='medium'>Password must contain at least one uppercase letter, number, and be longer than six charaters.</ion-label></ion-item>
+          <ion-item  *ngIf="formgroup.get('password').hasError('message') && !formgroup.controls.password.valid && formgroup.controls.password.touched" lines='none'>
+           <ion-label color='medium'>{{formgroup.get('password').errors['message']}}</ion-label></ion-item>
         </ion-list>
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size-md='7' offset-md="3">
+      <ion-col size-md='6' offset-md="3">
+        <div style="display: flex; justify-content: center;">
+          <ion-button type='submit' color="primary" (click)="onLogin()" [disabled]='!formgroup.valid'>
+            Login
+          </ion-button>
+        </div><br/>
+        <ion-label style="display: flex; justify-content: center;">Don't have an account?</ion-label>
+        <div style="display: flex; justify-content: center;">
+          <ion-button type='button' color="primary" fill='clear' (click)="signUp()">Sign Up</ion-button> 
+        </div>
         
-        <ion-button type='submit' color="primary" (click)="onLogin()" expand='block' [disabled]='!f.valid'>
-          Login
-        </ion-button>
-        <ion-button type='button' color="primary" fill='clear' expand='block'>
-          Signup
-        </ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
 </form>
- 
-
-</ion-content>
