changes done in dashboard

--- a/Automation-App/src/app/dashboard/dashboard.page.html
+++ b/Automation-App/src/app/dashboard/dashboard.page.html
@@ -1,53 +1,38 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-    <ion-menu-button ></ion-menu-button>
-     </ion-buttons>
-       <ion-title>
-        Dashboard
-       </ion-title>
-     </ion-toolbar>
-</ion-header>
-<ion-content >
-<ion-tabs >
-  <ion-tab-bar slot="top">
-    <ion-toolbar color="primary">
-        <ion-segment value="all" >
-       <ion-tab-button tab="monitoring">
-      <ion-segment-button value="monitoring">monitoring</ion-segment-button>
-      </ion-tab-button>
-      <ion-tab-button tab="control">
-      <ion-segment-button value="control">control</ion-segment-button>
-    </ion-tab-button>
-    </ion-segment>
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+      <ion-title>Dashboard</ion-title>
   </ion-toolbar>
-  </ion-tab-bar>
-</ion-tabs>
-<br><br><br>
-  <ion-item  lines="none" color="primary">
-      <ion-icon name="add"></ion-icon>
+  <ion-item color="primary">
     <ion-select value="system1">
-      <ion-select-option value="system1" >system1</ion-select-option>
-      <ion-select-option value="system2">system2</ion-select-option>
-    </ion-select> 
-    <ion-icon slot="end" name="search" > </ion-icon>
-  </ion-item>
-</ion-content>
+      <ion-select-option value="system1">System1</ion-select-option>
+      <ion-select-option value="system2">System2</ion-select-option>
+    </ion-select>
+    <ion-select value="grow room1">
+      <ion-select-option value="grow room1">Grow Room1</ion-select-option>
+      <ion-select-option value="grow room2">Grow Room2</ion-select-option>
+    </ion-select>
+    <ion-icon name="add-outline" slot="end"></ion-icon>
+  </ion-item>  
+</ion-header>
 <ion-content>
-<ion-tabs>
-<ion-tab-bar slot="bottom" color="primary">
-    <ion-tab-button tab="games">
-      <ion-label>help</ion-label>
-      <ion-icon name="help-circle-outline"></ion-icon>
-      </ion-tab-button>
-      <ion-tab-button>
-        <ion-label>login</ion-label>
-        <ion-icon name="person-circle-outline"></ion-icon>
-      </ion-tab-button>  
-    <ion-tab-button tab="movies">
-    <ion-label>Browser</ion-label>
-    <ion-icon name="browsers-outline"></ion-icon>
-    </ion-tab-button>
-</ion-tab-bar>
-</ion-tabs>
+  <ion-tabs>
+    <ion-tab-bar color="primary" slot="bottom"> 
+       <ion-tab-button tab="warnings">
+          <ion-label>Warnings</ion-label>
+          <ion-icon name="warning-outline"></ion-icon>
+       </ion-tab-button>
+        <ion-tab-button tab="monitoring">
+          <ion-label>Monitoring</ion-label>
+          <ion-icon name="eye-outline"></ion-icon>
+        </ion-tab-button>
+        <ion-tab-button tab="control">
+          <ion-label>Control</ion-label>
+          <ion-icon name="options-outline"></ion-icon>
+        </ion-tab-button>
+    </ion-tab-bar> 
+  </ion-tabs>
 </ion-content>
+  
