--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
@@ -1,11 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-    system
+      monitoring
     </ion-title>
   </ion-toolbar>
 </ion-header>
-
-<ion-content>
-
-</ion-content>
