--- a/Automation-App/src/app/dashboard/dashboard.page.html
+++ b/Automation-App/src/app/dashboard/dashboard.page.html
@@ -5,6 +5,7 @@
     </ion-buttons>
       <ion-title>Dashboard</ion-title>
   </ion-toolbar>
+  <!--selecting menu options-->
   <ion-item color="primary">
     <ion-select value="system1">
       <ion-select-option value="system1">System1</ion-select-option>
@@ -17,13 +18,14 @@
     <ion-icon name="add-outline" slot="end"></ion-icon>
   </ion-item>  
 </ion-header>
+<!--navigation from one tab to other tab-->
 <ion-content>
   <ion-tabs>
     <ion-tab-bar color="primary" slot="bottom"> 
-       <ion-tab-button tab="warnings">
+        <ion-tab-button tab="warnings">
           <ion-label>Warnings</ion-label>
           <ion-icon name="warning-outline"></ion-icon>
-       </ion-tab-button>
+        </ion-tab-button>
         <ion-tab-button tab="monitoring">
           <ion-label>Monitoring</ion-label>
           <ion-icon name="eye-outline"></ion-icon>
