--- a/Automation-App/src/app/register/register.page.html
+++ b/Automation-App/src/app/register/register.page.html
@@ -15,22 +15,32 @@
           <ion-item>
             <ion-label position='floating'>E-mail</ion-label>
             <ion-input type="email" formControlName="email"></ion-input>
-          </ion-item><ion-item  *ngIf="!form.controls.email.valid && form.controls.email.touched" lines='none'>
+          </ion-item>
+          <ion-item  *ngIf="!form.controls.email.valid && form.controls.email.touched" lines='none'>
             <ion-label color='danger'>Should be a valid email address.</ion-label> 
           </ion-item>
-          <ion-item>
-            <ion-label position="floating">Password</ion-label>
-            <ion-input type="password" formControlName="password"></ion-input>
-          </ion-item>
-          <ion-item  *ngIf="form.get('password').hasError('message') && !form.controls.password.valid && form.controls.password.touched" lines='none'>
-           <ion-label color='medium'>{{form.get('password').errors['message']}}</ion-label></ion-item>
+
+          <div formGroupName="passwordGroup">
+            <div class="formGroup">
+              <ion-item>
+               <ion-label position="floating">Password</ion-label>
+               <ion-input type="password" formControlName="password"></ion-input>
+               </ion-item>
+            <ion-item  *ngIf="form.get('passwordGroup.password').hasError('message') && !form.controls.passwordGroup.get('password').valid && form.controls.passwordGroup.get('password').touched" lines='none'>
+              <ion-label color='medium'>{{form.get('passwordGroup.password').errors['message']}}</ion-label>
+             </ion-item>
+            </div>
+
+          <div class="formGroup">
            <ion-item>
             <ion-label position="floating">Confirm Password</ion-label>
             <ion-input type="password" formControlName="confirmpassword"></ion-input>
           </ion-item>
-          <ion-item *ngIf="form.controls.confirmpassword.touched && form.hasError('mismatch')">
-            <ion-label color='danger'>{{form.get('confirmpassword').errors['mismatch']}}</ion-label>
+          <ion-item *ngIf="form.controls.passwordGroup.get('confirmpassword').touched && form.controls.passwordGroup.hasError('mismatch')" lines='none'>
+            <ion-label color='danger'>{{form.get('passwordGroup').errors['mismatch']}}</ion-label>
           </ion-item>
+        </div>
+      </div>
         </ion-list>
       </ion-col>
     </ion-row>
