--- a/Automation-App/src/app/register/register.page.html
+++ b/Automation-App/src/app/register/register.page.html
@@ -1,12 +1,12 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Sign Up</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
   <p align="center"> <ion-img style="width: 100px;" src="assets/icon/logo1.jpg"></ion-img></p>
-  <form [formGroup]="form">
+  <form [formGroup]="form" (ngSubmit)=onSubmit(form)>
     <!--Start of the grid-->
   <ion-grid>
     <ion-row>
@@ -18,19 +18,27 @@
           </ion-item><ion-item  *ngIf="!form.controls.email.valid && form.controls.email.touched" lines='none'>
             <ion-label color='danger'>Should be a valid email address.</ion-label> 
           </ion-item>
-          <ion-item>
-            <ion-label position="floating">Password</ion-label>
-            <ion-input type="password" formControlName="password"></ion-input>
-          </ion-item>
-          <ion-item  *ngIf="form.get('password').hasError('message') && !form.controls.password.valid && form.controls.password.touched" lines='none'>
-           <ion-label color='medium'>{{form.get('password').errors['message']}}</ion-label></ion-item>
+          <div formGroupName="passwordGroup">
+            <div class="formGroup">
+              <ion-item>
+               <ion-label position="floating">Password</ion-label>
+               <ion-input clearOnEdit="false" type="password" formControlName="password"></ion-input>
+               </ion-item>
+            <ion-item  *ngIf="form.get('passwordGroup.password').hasError('message') && !form.controls.passwordGroup.get('password').valid && form.controls.passwordGroup.get('password').touched" lines='none'>
+              <ion-label color='danger'>{{form.get('passwordGroup.password').errors['message']}}</ion-label>
+             </ion-item>
+            </div>
+
+          <div class="formGroup">
            <ion-item>
             <ion-label position="floating">Confirm Password</ion-label>
-            <ion-input type="password" formControlName="confirmpassword"></ion-input>
+            <ion-input clearOnEdit="false" type="password" formControlName="confirmpassword"></ion-input>
           </ion-item>
-          <ion-item *ngIf="form.controls.confirmpassword.touched && form.hasError('mismatch')">
-            <ion-label color='danger'>{{form.get('confirmpassword').errors['mismatch']}}</ion-label>
+          <ion-item  *ngIf="form.get('passwordGroup.confirmpassword').touched && form.controls.passwordGroup.hasError('mismatch')" lines='none'>
+            <ion-label color='danger'>{{form.get('passwordGroup').errors['mismatch']}}</ion-label>
           </ion-item>
+        </div>
+      </div>
         </ion-list>
       </ion-col>
     </ion-row>
@@ -43,7 +51,7 @@
         </div><br/>
         <ion-label style="display: flex; justify-content: center;">Already have an account?</ion-label>
         <div style="display: flex; justify-content: center;">
-          <ion-button type='button' color="primary" fill='clear' (click)="Login()">Login</ion-button> 
+          <ion-button type='button' color="primary" fill='clear'>Login</ion-button> 
         </div>
       </ion-col>
     </ion-row>
