updated dashboard page

--- a/Automation-App/src/app/dashboard/dashboard.page.html
+++ b/Automation-App/src/app/dashboard/dashboard.page.html
@@ -6,7 +6,7 @@
       <ion-title>Dashboard</ion-title>
   </ion-toolbar> 
 </ion-header>
-<!--navigation from one tab to other tab-->
+<!--Navigation from one tab to other tab-->
 <ion-content padding>
   <ion-tabs>
     <ion-tab-bar color="primary" slot="top"> 
