--- a/Automation-App/src/app/register/register.page.html
+++ b/Automation-App/src/app/register/register.page.html
@@ -6,8 +6,9 @@
 
 <ion-content padding>
   <p align="center"> <ion-img style="width: 100px;" src="assets/icon/logo1.jpg"></ion-img></p>
-  <form [formGroup]="form" (ngSubmit)=onSubmit(form)>
-    <!--Start of the grid-->
+  <!--Start of the form.-->
+  <form [formGroup]="form" (ngSubmit)='onSubmit(form)'>
+    <!--Start of the grid.-->
   <ion-grid>
     <ion-row>
       <ion-col size-md='6' offset-md="3">
@@ -34,7 +35,8 @@
             <ion-label position="floating">Confirm Password</ion-label>
             <ion-input clearOnEdit="false" type="password" formControlName="confirmpassword"></ion-input>
           </ion-item>
-          <ion-item  *ngIf="form.get('passwordGroup.confirmpassword').touched && form.controls.passwordGroup.hasError('mismatch')" lines='none'>
+          <ion-item  *ngIf="form.get('passwordGroup.confirmpassword').hasError('message')  && form.get('passwordGroup.confirmpassword').touched && form.controls.passwordGroup.hasError('mismatch')" lines='none'>
+            <!--If Confirm Password is not same as the Password, the custom error message is shown.-->
             <ion-label color='danger'>{{form.get('passwordGroup').errors['mismatch']}}</ion-label>
           </ion-item>
         </div>
@@ -45,13 +47,13 @@
     <ion-row>
       <ion-col size-md='6' offset-md="3">
         <div style="display: flex; justify-content: center;">
-          <ion-button type='submit' color="primary" (click)="onSignUp()" [disabled]='!form.valid'>
+          <ion-button type='submit' color="primary" [disabled]='!form.valid'>
             Sign Up
           </ion-button>
         </div><br/>
         <ion-label style="display: flex; justify-content: center;">Already have an account?</ion-label>
         <div style="display: flex; justify-content: center;">
-          <ion-button type='button' color="primary" fill='clear'>Login</ion-button> 
+          <ion-button type='button' color="primary" fill='clear' (click)="onSwitch()">Login</ion-button> 
         </div>
       </ion-col>
     </ion-row>
