--- a/Automation-App/src/app/auth/auth.page.html
+++ b/Automation-App/src/app/auth/auth.page.html
@@ -33,7 +33,7 @@
     <ion-row>
       <ion-col size-md='6' offset-md="3">
         <div style="display: flex; justify-content: center;">
-          <ion-button type='submit' color="primary" (click)="onLogin()" [disabled]='!formgroup.valid'>
+          <ion-button type='submit' color="primary" [disabled]='!formgroup.valid'>
             <!--The login button is disabled if the form is invalid.-->
             Login
           </ion-button>
