have to implement the call function in ionic

--- a/Automation-App/src/app/dashboard/dashboard.page.html
+++ b/Automation-App/src/app/dashboard/dashboard.page.html
@@ -21,7 +21,7 @@
         </ion-tab-button>
     </ion-tab-bar> 
   </ion-tabs>
-  <ion-button (click)="onPublishMessage()">Publish Message</ion-button> 
+  <!-- <ion-button (click)="onPublishMessage()">Publish Message</ion-button>  -->
 </ion-content>
 
 
