--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
@@ -20,8 +20,8 @@
               <h2 >{{system.current_val}}</h2>
               <h2>{{system.title}}</h2>
               <hr color="white">
-              <ion-button (click)="onMessageArrived()">{{livereadings}}</ion-button>
-               <!-- <h6 (click)="onPublishMessage(onMessageArrived())"></h6>  -->
+              <div id = "ResponseObject"></div>
+              <!-- <ion-button (click)="onMessageArrived()">{{livereadings}}</ion-button> -->
               <h4>{{system.range}}</h4>
             </ion-card-content>
           </ion-card>
