display live ph value

--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
@@ -20,7 +20,7 @@
               <h2 >{{system.current_val}}</h2>
               <h2>{{system.title}}</h2>
               <hr color="white">
-              <div id = "ResponseObject"></div>
+              <div id = "123"></div>
               <!-- <ion-button (click)="onMessageArrived()">{{livereadings}}</ion-button> -->
               <h4>{{system.range}}</h4>
             </ion-card-content>
