--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.scss
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.scss
@@ -1,4 +1,5 @@
 .circular-monitor {
+    padding: 0px;
     border-radius: 50%;
 	position: relative;
     width: 90%;
@@ -18,6 +19,11 @@
 
 .no-padding {
     padding: 0px;
+}
+
+.card_content{
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 
