Android Build Files Added and Capacitor Integrated

--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.scss
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.scss
@@ -21,9 +21,23 @@
     padding: 0px;
 }
 
-.card_content{
+.card_content {
     padding-left: 5px;
     padding-right: 5px;
+}
+
+.dropdown {
+    margin-left: 10px;
+    margin-right: 10px;
+    --ion-color-primary-contrast: #000000;
+}
+
+ion-content{
+    --background:linear-gradient(#2679B9 0%, #196097 15%, #003157 100%) !important;
+}
+
+h3 {
+    color: white;
 }
 
 
