--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
@@ -1,49 +1,76 @@
 <!--selecting menu options-->
 <ion-item color="primary">
-  <ion-select #systemValue [(ngModel)]="systemID" (ionChange)="changeSystem(systemValue.value)"> 
-    <ion-select-option *ngFor="let systemVariable of variableManagentService.systems" [value]="systemVariable">{{ systemVariable }}</ion-select-option>
+  <ion-select
+    #growRoomValue
+    [interfaceOptions]="growRoomAlertOptions"
+    class="dropdown"
+    [(ngModel)]="growRoomID"
+    (ionChange)="changeGrowRoom(growRoomValue.value)"
+  >
+    <ion-select-option
+      *ngFor="let growRoomVariable of variableManagentService.growRooms"
+      [value]="growRoomVariable"
+      >{{ growRoomVariable }}</ion-select-option
+    >
   </ion-select>
-  <ion-select #growRoomValue [(ngModel)]="growRoomID" (ionChange)="changeGrowRoom(growRoomValue.value)">
-    <ion-select-option *ngFor="let growRoomVariable of variableManagentService.growRooms" [value]="growRoomVariable">{{ growRoomVariable }}</ion-select-option>
+  <ion-select
+    [interfaceOptions]="systemAlertOptions"
+    class="dropdown"
+    #systemValue
+    [(ngModel)]="systemID"
+    (ionChange)="changeSystem(systemValue.value)"
+  >
+    <ion-select-option
+      *ngFor="let systemVariable of variableManagentService.systems"
+      [value]="systemVariable"
+      >{{ systemVariable }}</ion-select-option
+    >
   </ion-select>
   <ion-icon name="add-outline" slot="end"></ion-icon>
 </ion-item>
 
-<ion-content color="primary">
-  <ion-title><h1>System Variables</h1></ion-title>
-    <ion-grid class="no-padding">
-      <ion-row class="no-padding">
-        <ion-col *ngFor ="let systemVariable of variableManagentService.systemVariableDisplays" size="4" class="no-padding">
-          <ion-card class="circular-monitor">
-            <ion-card-content class="card_content">
-              <h2 >{{systemVariable.current_val}}</h2>
-              <h2>{{systemVariable.title}}</h2>
-              <hr color="white">
-              <div id = "123"></div>
-              <h4>{{systemVariable.range}}</h4>
-            </ion-card-content>
-          </ion-card>
-        </ion-col>
-        </ion-row>
-         <ion-title><h1>GrowRoom Variables</h1></ion-title>
-         <ion-row class="no-padding">
-         <ion-col *ngFor ="let growRoomVariable of variableManagentService.growRoomVariableDisplays" size="4" class="no-padding">
-            <ion-card class="circular-monitor">
-              <ion-card-content class="card_content">
-              <h2>{{growRoomVariable.current_val}}</h2>
-              <h3>{{growRoomVariable.title}}</h3>
-              <hr color="white">
-              <h4>{{growRoomVariable.range}}</h4>
-              </ion-card-content>
-            </ion-card>
-         </ion-col>
-         <ion-title><h1>Equipment Status</h1></ion-title>
-         <ion-chip *ngFor ="let specification of specifications">  
-           <ion-icon name="ellipse" color = "danger"></ion-icon>
-           <ion-label>{{specification}}</ion-label>
-          </ion-chip>
-       </ion-row>
-     </ion-grid>
+<ion-content>
+  <ion-title><h3>System Variables</h3></ion-title>
+  <ion-grid class="no-padding">
+    <ion-row class="no-padding">
+      <ion-col
+        *ngFor="let systemVariable of variableManagentService.systemVariableDisplays"
+        size="4"
+        class="no-padding"
+      >
+        <ion-card class="circular-monitor">
+          <ion-card-content class="card_content">
+            <h2>{{systemVariable.current_val}}</h2>
+            <h2>{{systemVariable.title}}</h2>
+            <hr color="white" />
+            <h4>{{systemVariable.range}}</h4>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-title><h3>GrowRoom Variables</h3></ion-title>
+    <ion-row class="no-padding">
+      <ion-col
+        *ngFor="let growRoomVariable of variableManagentService.growRoomVariableDisplays"
+        size="4"
+        class="no-padding"
+      >
+        <ion-card class="circular-monitor">
+          <ion-card-content class="card_content">
+            <h2>{{growRoomVariable.current_val}}</h2>
+            <h3>{{growRoomVariable.title}}</h3>
+            <hr color="white" />
+            <h4>{{growRoomVariable.range}}</h4>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+    <ion-title><h3>Equipment Status</h3></ion-title>
+    <ion-row class="no-padding">
+      <ion-chip *ngFor="let specification of specifications">
+        <ion-icon name="ellipse" color="danger"></ion-icon>
+        <ion-label>{{specification}}</ion-label>
+      </ion-chip>
+    </ion-row>
+  </ion-grid>
 </ion-content>
-  
-  
