--- a/Automation-App/src/theme/variables.scss
+++ b/Automation-App/src/theme/variables.scss
@@ -4,7 +4,8 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #1a73a7;
+  --ion-background-color:#ffffff;
+  --ion-color-primary: #1277C4;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
