--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.scss
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.scss
@@ -36,8 +36,12 @@ ion-content{
     --background:linear-gradient(#2679B9 0%, #196097 15%, #003157 100%) !important;
 }
 
-h3 {
+.title {
     color: white;
+    margin-top: 10px;
+    margin-bottom: 2px;
+    margin-left: 10px;
 }
+
 
 
