--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.scss
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.scss
@@ -43,5 +43,34 @@ ion-content{
     margin-left: 10px;
 }
 
+.dashboard-card {
+    margin-left: 20px;
+    margin-right: 20px;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+}
+
+h1 {
+    font-weight: 450;
+    color: black;
+    font-size: 300%;
+}
+
+.header-title {
+    font-weight: 700;
+    color: black;
+    font-size: 150%;
+    margin:0px;
+}
+
+ion-card-header {
+    padding: 10px;
+}
+
+.check-icon {
+    color: green;
+}
+
 
 
