--- a/Automation-App/src/app/components/sensor-display/sensor-display.component.scss
+++ b/Automation-App/src/app/components/sensor-display/sensor-display.component.scss
@@ -1,16 +1,14 @@
 
 .dashboard-card {
-    margin-left: 20px;
-    margin-right: 20px;
     border-radius: 5px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.2);
     transition: 0.3s;
 }
 
 h1 {
     font-weight: 450;
     color: black;
-    font-size: 300%;
+    font-size: 350%;
 }
 
 .header-title {
@@ -25,6 +23,11 @@ ion-card-header {
     padding: 10px;
 }
 
+ion-card {
+    margin-top: 15px;
+    border: 1px solid grey;
+}
+
 .check-icon {
     color: green;
     margin-bottom: 25px;
@@ -34,7 +37,7 @@ ion-card-header {
 
 ion-card-content {
     padding: 5px;
-    padding-top: 0px;
+    padding-top: 10px;
 }
 
 ion-grid{
@@ -48,3 +51,23 @@ ion-col {
 ion-toggle {
     margin-top: 5px;
 }
+
+.value {
+    font-size: 20px;
+    color: black;
+    font-weight: 800;
+}
+
+.title {
+    font-size: 14px;
+    color: gray;
+    font-weight: 800;
+}
+
+.details ion-icon {
+    font-size: 20px;
+    margin-right: 5px;
+    color: black;
+}
+
+
