--- a/Automation-App/src/app/graphs/visualization/visualization.page.html
+++ b/Automation-App/src/app/graphs/visualization/visualization.page.html
@@ -1,14 +1,79 @@
 <ion-header>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css">
   <ion-toolbar>
     <ion-title>visualization</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
 
-<div style="height:1500px; width: 1000px;">  
-  <canvas id="lineChart"></canvas>
-</div>
+<ion-item color="primary">
+  <ion-select #growRoomValue slot="start" [interfaceOptions]="growRoomAlertOptions" class="dropdown" [(ngModel)]="growRoomID"
+    (ionChange)="changeGrowRoom(growRoomValue.value)">
+    <ion-select-option *ngFor="let growRoomVariable of variableManagentService.growRooms" [value]="growRoomVariable">
+      {{ growRoomVariable }}</ion-select-option>
+  </ion-select>
+  <ion-icon name="add-outline"></ion-icon>
+  <ion-select slot="end" [interfaceOptions]="systemAlertOptions" class="dropdown" #systemValue [(ngModel)]="systemID"
+    (ionChange)="changeSystem(systemValue.value)">
+    <ion-select-option *ngFor="let systemVariable of variableManagentService.systems" [value]="systemVariable">
+      {{ systemVariable }}</ion-select-option>
+  </ion-select>
+  <ion-icon slot="end" name="add-outline"></ion-icon>
+</ion-item>
+
+
+<!-- <div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-12 col-md-4 form-group">
+      <input type="text"
+            placeholder="Datepicker"
+            class="form-control"
+            bsDatepicker>
+    </div>
+    <div class="col-xs-12 col-12 col-md-4 form-group">
+      <input type="text"
+            placeholder="Daterangepicker"
+            class="form-control"
+            bsDaterangepicker>
+    </div>
+  </div>
+</div> -->
+
+<ion-content>
+  <div class="ion-padding">
+    
+    <ion-item>
+      <ion-label>Start Date</ion-label>
+      <ion-datetime placeholder="Select Date" displayFormat="YYYY-MM-DD HH:mm:ss" pickerFormat="YYYY-MM-DDTHH:mm:ss" [(ngModel)]="startDate" (ionChange)="dateChanged($event)"></ion-datetime>
+    </ion-item>
+    <ion-item>
+      <ion-label>End Date</ion-label>
+      <ion-datetime placeholder="Select Date" displayFormat="YYYY-MM-DD HH:mm:ss" [(ngModel)]="endDate" (ionChange)="getData()"></ion-datetime>
+    </ion-item>
+
+
+    <ion-item>
+    <ion-label>Quick Views:</ion-label>
+    <ion-select [compareWith]="compareWith" value="{{DefaultValue}}" (ionChange)="onSelectedChange($event)" >
+      <ion-select-option *ngFor="let option of options" value="{{option.id}}">{{option.name}}
+      </ion-select-option>
+    </ion-select>
+    </ion-item>
+
+  </div>
+    
+  <!-- <ion-card class="welcome-card"> -->
+    <div class="chart-container">
+        <ion-card-content>
+          <canvas baseChart
+            [datasets]="chartData"
+            [labels]="chartLabels"
+            [chartType]="chartType"
+            [options]="chartOptions">
+          </canvas>
+        </ion-card-content>
+  </div>
+<!-- </ion-card> -->
 </ion-content>
