--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -62,15 +62,15 @@
               </ion-item>
             </ion-row>
             <ion-row *ngIf="controlForm.get('day_and_night').value">
-              <ion-col size="6">
+              <ion-col size="4">
                 <ion-item>
-                  <ion-label position="floating">Day Target Value</ion-label>
+                  <ion-label position="floating">Day Target</ion-label>
                   <ion-input formControlName="day_target_value" type="number"></ion-input>
                 </ion-item>
               </ion-col>
-              <ion-col size="6">
+              <ion-col offset="2" size="4">
                 <ion-item>
-                  <ion-label position="floating">Night Target Value</ion-label>
+                  <ion-label position="floating">Night Target</ion-label>
                   <ion-input formControlName="night_target_value" type="number"></ion-input>
                 </ion-item>
               </ion-col>
@@ -78,28 +78,27 @@
             <ion-row *ngIf="!controlForm.get('day_and_night').value">
               <ion-col size="12">
                 <ion-item>
-                  <ion-label position="floating">Target Value</ion-label>
+                  <ion-label position="floating">Target</ion-label>
                   <ion-input formControlName="target_value" type="number"></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
-  
-            <h3>Alarm Settings</h3>
-            <ion-row>
-              <ion-col size="5">
-                <ion-item>
-                  <ion-label position="floating">Min</ion-label>
-                  <ion-input formControlName="alarm_min" type="number"></ion-input>
-                </ion-item>
-              </ion-col>
-              <ion-col offset="1" size="5">
-                <ion-item>
-                  <ion-label position="floating">Max</ion-label>
-                  <ion-input formControlName="alarm_max" type="number"></ion-input>
-                </ion-item>
-              </ion-col>
-            </ion-row>
           </div>
+          <h3>Alarm Settings</h3>
+        <ion-row>
+          <ion-col size="5">
+            <ion-item>
+              <ion-label position="floating">Min</ion-label>
+              <ion-input formControlName="alarm_min" type="number"></ion-input>
+            </ion-item>
+          </ion-col>
+          <ion-col offset="1" size="5">
+            <ion-item>
+              <ion-label position="floating">Max</ion-label>
+              <ion-input formControlName="alarm_max" type="number"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
         </div>
       </form>
     </ion-grid>
