--- a/Automation-App/src/app/components/sensor-display/sensor-display.component.html
+++ b/Automation-App/src/app/components/sensor-display/sensor-display.component.html
@@ -10,10 +10,26 @@
           </ion-item>
         </ion-col>
         <ion-col offset="1" size="5" class="details">
-            <ion-label class="title">Target Value</ion-label>
-            <div>
-              <ion-icon name="locate-sharp"></ion-icon>
-              <ion-label class="value">{{ sensor.target_val }} &#8451;</ion-label>
+            <div *ngIf="!sensor.monitoring_only">
+              <div *ngIf="!sensor.day_and_night">
+                <ion-label class="title">Target Value</ion-label>
+                <div>
+                  <ion-icon name="locate-sharp"></ion-icon>
+                  <ion-label class="value">{{ sensor.target_val }} &#8451;</ion-label>
+                </div>
+              </div>
+              <div *ngIf="sensor.day_and_night">
+                <ion-label class="title">Day Target Value</ion-label>
+                <div>
+                  <ion-icon name="locate-sharp"></ion-icon>
+                  <ion-label class="value">{{ sensor.day_target_value }} &#8451;</ion-label>
+                </div>
+                <ion-label class="title">Night Target Value</ion-label>
+                <div>
+                  <ion-icon name="locate-sharp"></ion-icon>
+                  <ion-label class="value">{{ sensor.night_target_value }} &#8451;</ion-label>
+                </div>
+              </div>
             </div>
             <ion-label class="title">Alarm Settings</ion-label>
             <div>
