--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
@@ -1,36 +1,77 @@
 <!--selecting menu options-->
-<ion-toolbar color="primary">
-    <ion-select #growRoomValue slot="start" [interfaceOptions]="growRoomAlertOptions" class="dropdown" [(ngModel)]="growRoomID"
-    (ionChange)="changeGrowRoom(growRoomValue.value)">
-    <ion-select-option *ngFor="let growRoomVariable of variableManagentService.growRooms" [value]="growRoomVariable">
-      {{ growRoomVariable }}</ion-select-option>
+<ion-toolbar color="primary" *ngIf="!variableManagentService.noClusters">
+    <ion-select #clusterValue slot="start" [interfaceOptions]="clusterAlertOptions" class="dropdown" [(ngModel)]="clusterName"
+    (ionChange)="changeCluster(clusterValue.value)" placeholder='Select a Cluster'>
+    <ion-select-option *ngFor="let cluster of variableManagentService.clusterNames" [value]="cluster">
+      {{ cluster }}</ion-select-option>
   </ion-select>
-  <ion-buttons slot="start">
-    <ion-icon name="add-outline"></ion-icon>
-  </ion-buttons>
-    <ion-select slot="start" [interfaceOptions]="systemAlertOptions" class="dropdown" #systemValue [(ngModel)]="systemID"
-    (ionChange)="changeSystem(systemValue.value)">
-    <ion-select-option *ngFor="let systemVariable of variableManagentService.systems" [value]="systemVariable">
-      {{ systemVariable }}</ion-select-option>
+    <ion-select *ngIf="!variableManagentService.noDevices" slot="start" [interfaceOptions]="deviceAlertOptions" class="dropdown" #deviceValue [(ngModel)]="deviceName"
+    (ionChange)="changeDevice(deviceValue.value)" placeholder='Select a Device'>
+    <ion-select-option *ngFor="let device of variableManagentService.devices" [value]="device">
+      {{ device }}</ion-select-option>
   </ion-select>
-  <ion-buttons slot="start" >
-    <ion-icon name="add-outline"></ion-icon>
-  </ion-buttons>
+  <ion-button slot="end" class="add_button" (click)="presentActionSheet()">Setup</ion-button>
 </ion-toolbar>
 
 <ion-content>
   <div class="content">
-    <div>
-      <h2>System Variables</h2>
-      <h2>{{ systemTimeStamp }}</h2>
+    <div *ngIf="!variableManagentService.noDevices && !variableManagentService.noClusters">
+      <div>
+        <h2>Live Sensor Data</h2>
+        <h2>{{ timeStamp }}</h2>
+      </div>
+      <span *ngFor="let sensorValues of variableManagentService.sensorDisplays">
+        <sensor-display [sensor]="sensorValues"></sensor-display>
+      </span>
     </div>
-    <span *ngFor="let systemVariable of variableManagentService.systemVariableDisplays">
-      <sensor-display [sensor]="systemVariable"></sensor-display>
-    </span>
-    <h2>Grow Room Variables</h2>
-    <span *ngFor="let growRoomVariable of variableManagentService.growRoomVariableDisplays">
-      <sensor-display [sensor]="growRoomVariable"></sensor-display>
-    </span>
+    <div *ngIf="variableManagentService.noClusters" class="center">
+      <ion-grid>
+        <ion-row>
+          <ion-col size="10" offset="1">
+            <h6>There are no clusters to display</h6>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="10" offset="1">
+            <h6>Click the Create Cluster button to create a new cluster</h6>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-button class="add_button" (click)="presentClusterModal()">Create Cluster</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
+    <div *ngIf="!variableManagentService.noClusters && variableManagentService.noDevices" class="center">
+      <ion-grid>
+        <ion-row>
+          <ion-col size="10" offset="1">
+            <h6>There are no devices in this cluster</h6>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="10" offset="1">
+            <h6>Click the Create Grow Room button to setup a Grow Room</h6>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-button class="add_button" (click)="presentGrowRoomModal()">Create Grow Room</ion-button>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="10" offset="1">
+            <h6>Click the Create System button to setup a System</h6>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>
+            <ion-button class="add_button" (click)="presentSystemModal()">Create System</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
   </div>
 </ion-content>
 
