--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.scss
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.scss
@@ -1,5 +1,3 @@
-
-
 .no-padding {
     padding: 0px;
 }
@@ -14,10 +12,27 @@ ion-content{
     --background:linear-gradient(#2679B9 0%, #196097 15%, #003157 100%) !important;
 }
 
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+  }
+
+ion-col {
+    text-align: center;
+}
+
 .content {
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 10px;;
+}
+
+.add_button {
+    margin-right: 20px;
+    font-weight: bolder;
+    letter-spacing: 1px;
 }
 
 .title {
@@ -41,7 +56,7 @@ h1 {
     font-size: 300%;
 }
 
-h2 {
+h2, h6 {
     color: white;
     margin-left: 10px;
     display: inline;
